# h5max

./: README.md  setup.cfg  setup.py
h5max/: __init__.py  h5max.py
