[metadata]
name = h5max
author = Jim Clauwaert
description = scipy.sparse support on h5py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdcla/h5max
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy>=1.21.0
    scipy>=1.7.3